--- a/css/_grid.scss
+++ b/css/_grid.scss
@@ -191,7 +191,7 @@
   .col-xs-offset-0 {
     margin-left: 0%;
   }
-  @media (min-width: 480px) {
+  @media (min-width: 600px) {
     .col-s-12 {
       width: 100%;
     }
@@ -228,8 +228,47 @@
     .col-s-1 {
       width: 8.33333333%;
     }
+    .col-s-offset-12 {
+      margin-left: 100%;
+    }
+    .col-s-offset-11 {
+      margin-left: 91.66666667%;
+    }
+    .col-s-offset-10 {
+      margin-left: 83.33333333%;
+    }
+    .col-s-offset-9 {
+      margin-left: 75%;
+    }
+    .col-s-offset-8 {
+      margin-left: 66.66666667%;
+    }
+    .col-s-offset-7 {
+      margin-left: 58.33333333%;
+    }
+    .col-s-offset-6 {
+      margin-left: 50%;
+    }
+    .col-s-offset-5 {
+      margin-left: 41.66666667%;
+    }
+    .col-s-offset-4 {
+      margin-left: 33.33333333%;
+    }
+    .col-s-offset-3 {
+      margin-left: 25%;
+    }
+    .col-s-offset-2 {
+      margin-left: 16.66666667%;
+    }
+    .col-s-offset-1 {
+      margin-left: 8.33333333%;
+    }
+    .col-s-offset-0 {
+      margin-left: 0%;
+    }
   }
-  @media (min-width: 768px) {
+  @media (min-width: 960px) {
     .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
       float: left;
     }
@@ -387,7 +426,7 @@
       margin-left: 0%;
     }
   }
-  @media (min-width: 992px) {
+  @media (min-width: 1280px) {
     .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
       float: left;
     }
@@ -545,7 +584,7 @@
       margin-left: 0%;
     }
   }
-  @media (min-width: 1200px) {
+  @media (min-width: 1440px) {
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
       float: left;
     }
